# camp-casey-app

./: .dockerignore  .env.example  .gitignore  DELIVERY_REPORT.md  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml
camp_casey_app/: bootstrap.py  config.py  container.py  main.py
camp_casey_app/ai/: __init__.py  openai_client.py
camp_casey_app/api/: app.py  langserve_routes.py  routes.py  web.py
camp_casey_app/chat/: __init__.py  composer.py  intent_router.py  langgraph_workflow.py  schemas.py  session_store.py
camp_casey_app/domain/: models.py
camp_casey_app/ingest/: __init__.py  bus_parser.py  common.py  delivery_parser.py  holiday_parser.py  normalize.py  rag.py  train_parser.py
camp_casey_app/repositories/: __init__.py  exchange_rate_store.py  normalized_repository.py  rag_repository.py
camp_casey_app/services/: __init__.py  day_type.py  exchange_rate.py  holidays.py  search.py  stores.py  transport.py
camp_casey_app/utils/: __init__.py  money.py  text.py  time.py
data/normalized/: bus.json  holidays.json  manifest.json  stores.json  trains.json
data/rag/: rag_chunks.jsonl  rag_index.json
data/raw/: Bosan-Train-TimeTable.xlsx  Hovey-Bus-TimeTable.xlsx  delivery.json  holiday.json
data/state/: exchange_rate.json
scripts/: build_rag_index.py  ingest_all.py  seed_exchange_rate.py
tests/: conftest.py  test_api_smoke.py  test_chat_router.py  test_day_type_service.py  test_exchange_rate.py  test_ingest.py  test_rag_repository.py  test_store_service.py  test_transport_bus.py  test_transport_train.py  test_ui_static.py
(+6 files in other folders)
